# cubemelon-sdk

./: Cargo.toml  LICENSE  README.ja.md  README.md
docs/: getting_started.en.md  getting_started.ja.md
docs/specification/: specification.en.md  specification.ja.md  specification_ja.md
plugins/hello_world/: Cargo.toml  build.rs
plugins/hello_world/src/: lib.rs
plugins/simple_plugin/: Cargo.toml
plugins/simple_plugin/src/: lib.rs
plugins/single_task_test/: Cargo.toml  exports.def
plugins/single_task_test/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: host_services.rs  loader.rs  main.rs  manager.rs  state.rs
sdk/: Cargo.toml
sdk/src/: error.rs  instance.rs  lib.rs  macros.rs  memory.rs  string.rs  structs.rs  types.rs
sdk/src/interfaces/: async_task.rs  manager.rs  mod.rs  resident.rs  single_task.rs  state.rs
sdk_macros/: Cargo.toml
sdk_macros/src/: lib.rs  plugin.rs
sdk_macros/src/interface_impls/: async_task.rs  manager.rs  mod.rs  resident.rs  single_task.rs  state.rs
