[package]
name = "cubemelon"
version = "0.11.3"
edition = "2021"
authors = ["tapetums"]
description = "CubeMelon Plugin System Runtime - Host application for managing and executing plugins"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/tapetums/cubemelon"
keywords = ["plugin", "runtime", "host"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Core SDK dependency
cubemelon_sdk = { path = "../sdk", version = "0.11.3" }

# System utilities
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Configuration
dirs = "5.0"

# Windows API (for system language detection)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_SystemInformation", "Win32_Globalization"] }

[dev-dependencies]
tempfile = "3.0"