[package]
name = "cubemelon_sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "CubeMelon Plugin System SDK - Plugin development framework"

[lib]
name = "cubemelon_sdk"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
cubemelon_sdk_macros = { path = "../sdk_macros" }

[features]
default = []
# 将来の拡張用（現時点では標準ライブラリのみ）
experimental = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]